Fix project creation on mobile version

--- a/Frontend/src/App.module.scss
+++ b/Frontend/src/App.module.scss
@@ -3,6 +3,7 @@
 .app {
   display: flex;
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
   overflow: hidden;
   background: v.$bg-primary;
