--- a/Frontend/src/components/LoginPage/LoginPage.module.scss
+++ b/Frontend/src/components/LoginPage/LoginPage.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  min-height: 100dvh;
   background: v.$bg-primary;
 }
 
